# ironworks

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md
boilmaster/: .gitignore  Cargo.toml  boilmaster.toml  config.toml
boilmaster/.cargo/: config.toml
boilmaster/src/: column_filter.rs  data.rs  field_filter.rs  http.rs  lib.rs  main.rs  read.rs  search.rs  tracing.rs
boilmaster/src/asset/: convert.rs  error.rs  format.rs  mod.rs  service.rs
boilmaster/src/data/: data.rs  language.rs  mod.rs  patch.rs
boilmaster/src/http/: admin.rs  asset.rs  column_filter.rs  error.rs  extract.rs  http.rs  language.rs  mod.rs  path.rs  search.rs  service.rs  sheets.rs
boilmaster/src/http/admin/: admin.rs  auth.rs  base.rs  mod.rs  version.rs  versions.rs
boilmaster/src/patch/: mod.rs  patch.rs
boilmaster/src/patch/thaliak/: mod.rs  provider.rs  query.graphql
boilmaster/src/read/: filter.rs  mod.rs  read.rs  value.rs
boilmaster/src/schema/: error.rs  mod.rs  provider.rs  saint_coinach.rs  specifier.rs
boilmaster/src/search/: error.rs  index.rs  ingest.rs  mod.rs  query.rs  search.rs  version.rs
boilmaster/src/search/index/: index.rs  ingest.rs  mod.rs  resolve.rs  schema.rs  tokenize.rs
boilmaster/src/search/query/: mod.rs  normalize.rs  parse.rs  post.rs  pre.rs  query.rs
boilmaster/src/search/tantivy/: cursor.rs  index.rs  key.rs  metadata.rs  mod.rs  provider.rs  query.rs  resolve.rs  schema.rs
boilmaster/src/search2/: error.rs  mod.rs  schema.rs  search.rs
boilmaster/src/search2/query/: normalize.rs  parse.rs  pre.rs
boilmaster/src/search2/tantivy/: index.rs  metadata.rs  mod.rs  provider.rs  resolve.rs  schema.rs
boilmaster/src/util/: mod.rs  warnings.rs
boilmaster/src/utility/: anyhow.rs  field.rs  mod.rs
boilmaster/src/version/: key.rs  manager.rs  mod.rs  patch.rs  persist.rs  version.rs
boilmaster/src/version/thaliak/: provider.rs  schema.2022-08-14.json
boilmaster/templates/: admin.html
boilmaster/templates/admin/: base.html  version.html  versions.html
generator/: Cargo.toml
generator/src/: generate.rs  main.rs  utility.rs
generator/template/meta/: Cargo.toml  README.md
generator/template/src/: error.rs  lib.rs  metadata.rs  utility.rs
ironworks/: Cargo.toml
ironworks/src/: error.rs  filesystem.rs  ironworks.rs  lib.rs
ironworks/src/excel/: borrowed.rs  error.rs  excel.rs  excel_options.rs  ffxiv.rs  field.rs  iterator.rs  language.rs  list.rs  mapper.rs  metadata.rs  mod.rs  page.rs  path.rs  resource.rs  row.rs  sheet.rs
ironworks/src/excel/sheet/: field.rs  header.rs  iterator.rs  mod.rs  page.rs  row.rs  row_options.rs  sheet.rs
ironworks/src/ffxiv/: fs.rs  mapper.rs  mod.rs  sqpack.rs
ironworks/src/file/: eqdp.rs  exd.rs  exh.rs  exl.rs  file.rs  imc.rs  mdl.rs  mod.rs  mtrl.rs  pbd.rs  sklb.rs  tex.rs  traits.rs  uld.rs
ironworks/src/file/index/: crc.rs  index.rs  mod.rs
ironworks/src/file/mdl/: container.rs  mdl.rs  mesh.rs  mod.rs  model.rs  structs.rs
ironworks/src/file/mtrl/: material.rs  mod.rs  structs.rs
ironworks/src/file/patch/: chunk.rs  command.rs  lazy.rs  mod.rs  patch.rs  sqpack.rs  zipatch.rs
ironworks/src/file/uld/: asset.rs  component.rs  mod.rs  node.rs  parts.rs  shared.rs  timeline.rs  uld.rs  widget.rs
ironworks/src/sestring/: _ideas.rs  context.rs  cursor.rs  error.rs  expression.rs  extract_text.rs  macro_kind.rs  macro_string.rs  mod.rs  payload.rs  plain_format.rs  sestr.rs  sestring.rs  value.rs
ironworks/src/sestring/format/: argument.rs  character.rs  control_flow.rs  excel.rs  expression.rs  format.rs  input.rs  mod.rs  number.rs  runtime.rs  style.rs  test.rs  text.rs  time.rs  value.rs  write.rs
ironworks/src/sestring/payload/: case.rs  character.rs  control_flow.rs  format.rs  kind.rs  mod.rs  payload.rs  player.rs  sheet.rs  text.rs  time.rs
ironworks/src/sestring2/: cursor.rs  error.rs  expression.rs  macro_kind.rs  mod.rs  payload.rs  resolve.rs  sestring.rs
ironworks/src/sestring2/format/: argument.rs  character.rs  control_flow.rs  excel.rs  expression.rs  format.rs  input.rs  mod.rs  number.rs  runtime.rs  style.rs  test.rs  text.rs  time.rs  value.rs  write.rs
ironworks/src/sestring2/resolve/: argument.rs  character.rs  context.rs  control_flow.rs  excel.rs  mod.rs  number.rs  resolve.rs  shared.rs  text.rs  time.rs  value.rs
ironworks/src/sqpack/: error.rs  ffxiv.rs  file.rs  index.rs  install.rs  mod.rs  resource.rs  sqpack.rs  vinstall.rs
ironworks/src/sqpack/block/: block.rs  mod.rs  stream.rs
ironworks/src/sqpack/file/: empty.rs  file.rs  mod.rs  model.rs  shared.rs  standard.rs  texture.rs
ironworks/src/utility/: hash_map_cache.rs  mod.rs  option_cache.rs  take_seekable.rs
ironworks/src/zipatch/: cache.rs  chunks.rs  lookup.rs  mod.rs  mod_old.rs  repository.rs  section.rs  temp_sqpack.rs  utility.rs  version.rs  view.rs  zipatch.rs
ironworks_ffxiv/: Cargo.toml
ironworks_ffxiv/src/: excel.rs  lib.rs  main.rs  sqpack.rs
nero/: Cargo.toml
nero/.cargo/: config.toml
nero/assets/: bg.wgsl  test.wgsl
nero/assets/shader/: bg.wgsl  character.wgsl  mesh.wgsl  placeholder.wgsl  skin.wgsl  test.wgsl
nero/src/: camera.rs  ironworks.rs  main.rs
nero/src/asset_io/: asset_io.rs  mod.rs  native.rs  plugin.rs  wasm.js  wasm.rs
nero/src/asset_loader/: mdl.rs  mod.rs  mtrl.rs  plugin.rs  proxy.rs  sklb.rs  tex.rs
nero/src/asset_loaders/: mdl.rs  mod.rs  mtrl.rs  plugin.rs  tex.rs
nero/src/ironworks/: asset_io.rs  mdl.rs  mod.rs  plugin.rs  tex.rs
nero/src/material/: bg.rs  bg.wgsl  mod.rs  plugin.rs
nero/src/render/: material.rs  mod.rs  pipeline.rs  plugin.rs
nero/src/tool/: character.rs  dev.rs  explorer.rs  mod.rs  tool.rs
schema/: Cargo.toml
schema/core/src/: lib.rs
schema/saint_coinach/: Cargo.toml
schema/saint_coinach/src/: error.rs  lib.rs  parse.rs  schema.rs
schema/src/: error.rs  git.rs  lib.rs  schema.rs
schema/src/exdschema/: mod.rs  parse.rs  provider.rs  specifier.rs  version.rs
schema/src/saint_coinach/: mod.rs  parse.rs  provider.rs  version.rs
temp_test/: Cargo.toml
temp_test/src/: main.rs
(+873 files in other folders)
