[package]
name = "boilmaster"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.55"
askama = "0.12.0"
axum = {version = "0.6.12", features = ["macros"]}
either = "1.8.0"
figment = {version = "0.10.8", features = ["env", "toml"]}
futures = "0.3.25"
graphql_client = {version = "0.12.0"}
ironworks = {path = "../ironworks", features = ["excel", "sqpack", "zipatch"]}
ironworks_schema = {path = "../schema", features = ["saint_coinach"]}
nom = "7.1.1"
regex-syntax = "0.6.28"
reqwest = {version = "0.11.14", features = ["json"]}
serde = {version = "1.0.137", features = ["derive"]}
tantivy = "0.19.0"
thiserror = "1.0.30"
tokio = {version = "1.17.0", features = ["full"]}
tokio-util = "0.7.4"
tower-http = {version = "0.3.0", features = ["trace"]}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
