[package]
name = "boilmaster"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.55"
axum = {version = "0.6.12", features = ["headers", "macros"]}
either = "1.8.0"
figment = {version = "0.10.8", features = ["env", "toml"]}
fs4 = {version = "0.6.3", features = ["sync"]}
futures = "0.3.25"
graphql_client = {version = "0.12.0"}
humansize = "2.1.3"
image = {version = "0.24.6", default-features = false, features = ["png"]}
ironworks = {path = "../ironworks", features = ["excel", "sqpack", "tex", "zipatch"]}
ironworks_schema = {path = "../schema", features = ["saint_coinach"]}
itertools = "0.10.5"
maud = {version = "0.25.0", features = ["axum"]}
mime = "0.3.17"
nom = "7.1.1"
regex-syntax = "0.6.28"
reqwest = {version = "0.11.14", features = ["json"]}
seahash = "4.1.0"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.95"
tantivy = "0.19.0"
texpresso = "2.0.1"
thiserror = "1.0.30"
tokio = {version = "1.17.0", features = ["full"]}
tokio-util = "0.7.4"
tower-http = {version = "0.3.0", features = ["trace"]}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
