[package]
name = "generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.55"
ironworks = {path = "../ironworks", features = ["excel", "ffxiv", "sqpack"]}
ironworks_schema = {path = "../schema", features = ["saint_coinach"]}
lazy_static = "1.4.0"
prettyplease = "0.1.9"
proc-macro2 = "1.0.37"
quote = "1.0.18"
regex = "1.5.5"
rust-embed = {version = "6.4.0", features = ["interpolate-folder-path"]}
syn = "1.0.91"
