[package]
name = "ironworks"
version = "0.4.1"
authors = ["ackwell <saxon@ackwell.com.au>"]
edition = "2021"
description = "Modular FFXIV data toolkit written in rust."
readme = "../README.md"
repository = "https://github.com/ackwell/ironworks"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
# Modules
excel = [
  "dep:enum-as-inner",
  "dep:num_enum",
  "dep:strum",
  "sestring",
  "exd",
  "exh",
  "exl",
]
sestring = ["dep:time"]
sqpack = ["dep:flate2"]
zipatch = ["patch", "sqpack"]

# File types
eqdp = ["dep:modular-bitfield"]
exd = []
exh = ["dep:num_enum"]
exl = []
mdl = ["dep:half", "dep:modular-bitfield", "dep:num_enum"]
mtrl = []
patch = []
pbd = []
sklb = []
tex = ["dep:num_enum"]

[dependencies]
binrw = "0.10.0"
derivative = "2.2.0"
either = "1.8.0"
getset = "0.1.2"
thiserror = "1.0.30"

enum-as-inner = { version = "0.5.0", optional = true }
flate2 = { version = "1.0.22", optional = true }
half = { version = "2.1.0", optional = true }
modular-bitfield = { version = "0.11.2", optional = true }
num_enum = { version = "0.5.7", optional = true }
strum = { version = "0.24.1", features = ["derive"], optional = true }
time = { version = "0.3.20", optional = true }
