[package]
edition = "2021"
name = "ironworks_ffxiv"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ironworks_excel = {path = "../ironworks_excel"}
ironworks_sqpack = {path = "../ironworks_sqpack"}
num_enum = "0.5.7"
