[package]
name = "nero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
bevy = "0.7"
bevy_egui = "0.14"
ironworks = {path = "../ironworks", features = ["ffxiv", "sqpack", "exl", "mdl", "tex"]}
squish = "2.0.0-beta1"
