[package]
name = "nero"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
bevy = "0.7"
bevy_egui = "0.14"
futures-lite = "1.12.0"
ironworks = {path = "../ironworks", features = ["ffxiv", "sqpack", "exl", "mdl", "tex"]}
iyes_loopless = "0.5.1"
squish = "2.0.0-beta1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.8.2"
