[package]
name = "ironworks_schema"
version = "0.1.0"
edition = "2021"
publish = false

[features]
saint_coinach = ["derivative", "git2", "serde_json"]

[dependencies]
thiserror = "1.0.30"

derivative = { version = "2.2.0", optional = true }
git2 = { version = "0.14.2", optional = true }
serde_json = { version = "1.0.79", optional = true }
