[package]
name = "ironworks_schema"
version = "0.2.0"
edition = "2021"
publish = false

[features]
exdschema = ["derivative", "git2", "serde", "serde_yaml", "regex"]
saint_coinach = ["derivative", "git2", "serde_json"]

[dependencies]
thiserror = "2.0.3"

derivative = { version = "2.2.0", optional = true }
git2 = { version = "0.19.0", optional = true }
serde = { version = "1.0.202", features = ["derive"], optional = true }
serde_json = { version = "1.0.79", optional = true }
serde_yaml = { version = "0.9.34", optional = true }
regex = { version = "1.11.1", optional = true }
