[package]
name = "temp_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
env_logger = "0.9.0"
ironworks = {path = "../ironworks", features = ["sqpack", "excel"]}
ironworks_schema_saint_coinach = {path = "../schema/saint_coinach"}
