[package]
name = "ironworks_schema_saint_coinach"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.14.2"
ironworks_schema_core = {path = "../core"}
lazy_static = "1.4.0"
log = "0.4.16"
serde_json = "1.0.79"
thiserror = "1.0.30"
